Support UTF-encoded text files when importing certificates

GnuPG-bug-id: 6298