src/commands/importcertificatefromfilecommand.cpp
@@ -12,6 +12,8 @@
 #include "importcertificatefromfilecommand.h"
 #include "importcertificatescommand_p.h"
 
+#include <kleopatra_debug.h>
+
 #include <QGpgME/Protocol>
 
 #include <Libkleo/Classify>
@@ -25,6 +27,7 @@
 #include <QFile>
 #include <QFileDialog>
 #include <QString>
+#include <QTextCodec>
 #include <QWidget>
 #include <QFileInfo>
 #include <QDir>
@@ -134,7 +137,14 @@ void ImportCertificateFromFileCommand::doStart()
             d->importResult({fn, GpgME::UnknownProtocol, ImportType::Local, ImportResult{}, AuditLogEntry{}});
             continue;
         }
-        const auto data = in.readAll();
+        auto data = in.readAll();
+        // check for UTF-16- (or UTF-32- or UTF-8-with-BOM-)encoded text file;
+        // binary certificate files don't start with a BOM, so that it's safe
+        // to assume that data starting with a BOM is UTF-encoded text
+        if (const auto codec = QTextCodec::codecForUtfText(data, nullptr)) {
+            qCDebug(KLEOPATRA_LOG) << this << __func__ << "Decoding" << codec->name() << "encoded data";
+            data = codec->toUnicode(data).toUtf8();
+        }
         d->startImport(GpgME::OpenPGP, data, fn);
         d->startImport(GpgME::CMS, data, fn);
         d->importGroupsFromFile(fn);
